# cctoken

./: CLAUDE.md  README.md  install.sh  pyproject.toml
Formula/: cctoken.rb
cctoken/: cctoken.py  config.py  display.py  parser.py  pricing.py
cctoken/tests/: test_cli.py  test_config.py  test_display.py  test_parser.py  test_pricing.py
docs/: claude-code-integration.md
docs/superpowers/plans/: 2026-03-11-cctoken.md
docs/superpowers/specs/: 2026-03-11-token-monitoring-design.md
