[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cctoken"
version = "1.0.0"
description = "Claude Code token usage monitoring CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "HongChaeMin", email = "ghdcoalss33@gmail.com"}]
dependencies = ["rich>=13.0.0"]

[project.scripts]
cctoken = "cctoken.cctoken:main"

[tool.setuptools.packages.find]
include = ["cctoken*"]
